--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /EjercicioColecciones05/nbproject/private/
 /EjercicioColecciones05/build/
+/EjercicioColecciones06/nbproject/private/
+/EjercicioColecciones06/build/
+/EjercicioColecciones06/dist/
